--- a/Projects.html
+++ b/Projects.html
@@ -23,7 +23,7 @@
     
               <nev>
                 <ul>
-                    <li> <a  href="home.html"> <div class ="current"> Home</div> </a></li>
+                    <li> <a  href="index.html"> <div class ="current"> Home</div> </a></li>
                      <li> <a href="Projects.html">Projects </a></li>
                      <li> <a href="Blog.html">Blog</a></li>
                      <li> <a href="Contact.html"> Contact</a></li>                         
@@ -32,7 +32,7 @@
               
               <div id="Resp-nev" >
                   <ul>
-                      <li> <a  href="home.html"> <div class ="current"> Home</div> </a></li>
+                      <li> <a  href="index.html"> <div class ="current"> Home</div> </a></li>
                        <li> <a href="Projects.html">Projects </a></li>
                        <li> <a href="Blog.html">Blog</a></li>
                        <li> <a href="Contact.html"> Contact</a></li>                         
