--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <div id="spacer"> </div>
                         
                         <div id="about-me"> 
-                            <img src="Images/kay.jpg">
+                            <img src="images/kay.jpg">
                             <h2>About me</h2>
                             <div class="text">
                             <p>Hi i'm Kutullo ,an aspiring web nd game devloper 
