--- a/Projects.html
+++ b/Projects.html
@@ -54,7 +54,7 @@
             <div class ="project" style="background-color:#2F3FFC;">        
               
                 <div class="project-image">
-                    <img  src="images/Product.png">
+                    <img  src="Images/Product.png">
                 </div> 
 
             <div class="project-details">
@@ -90,7 +90,7 @@
             <div class ="project" style="background-color: #FE4A74;">        
               
                 <div class="project-image">
-                    <img  src="images/mobi.png">
+                    <img  src="Images/mobi.png">
                 </div> 
 
             <div class="project-details">
