--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                     </div>
                     <div id="socials">
                         <ul>
-                            <li> <a  href="home.html"> <img src="images/social/github1.png"></a></li>
-                            <li> <a href="Contact.html"><img src="images/social/twitter1.png"></a></li> 
-                            <li> <a href="Blog.html"><img src="images/social/instagram1.png"></a></li>                    
-                            <li> <a href="Projects.html"><img src="images/social/facebook1.png"> </a></li>                        
+                            <li> <a  href="home.html"> <img src="Images/social/github1.png"></a></li>
+                            <li> <a href="Contact.html"><img src="Images/social/twitter1.png"></a></li> 
+                            <li> <a href="Blog.html"><img src="Images/social/instagram1.png"></a></li>                    
+                            <li> <a href="Projects.html"><img src="Images/social/facebook1.png"> </a></li>                        
                         </ul> 
                     </div> 
                   
@@ -284,10 +284,10 @@
                         <div id="spacer"> </div>
                         <div id="socials">
                             <ul>
-                                <li> <a  href="home.html"> <img src="images/social/github.png"></a></li>
-                                <li> <a href="Contact.html"><img src="images/social/twitter.png"></a></li> 
-                                <li> <a href="Blog.html"><img src="images/social/instagram.png"></a></li>                    
-                                <li> <a href="Projects.html"><img src="images/social/msg.png"> </a></li>                        
+                                <li> <a  href="home.html"> <img src="Images/social/github.png"></a></li>
+                                <li> <a href="Contact.html"><img src="Images/social/twitter.png"></a></li> 
+                                <li> <a href="Blog.html"><img src="Images/social/instagram.png"></a></li>                    
+                                <li> <a href="Projects.html"><img src="Images/social/msg.png"> </a></li>                        
                             </ul> 
                         </div>  
 
