--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                     <div id="socials">
                         <ul>
-                            <li> <a  href="home.html"> <img src="Images/social/github1.png"></a></li>
+                            <li> <a  href="home.html"> <img src="/Images/social/github1.png"></a></li>
                             <li> <a href="Contact.html"><img src="Images/social/twitter1.png"></a></li> 
                             <li> <a href="Blog.html"><img src="Images/social/instagram1.png"></a></li>                    
                             <li> <a href="Projects.html"><img src="Images/social/facebook1.png"> </a></li>                        
