--- a/Projects.html
+++ b/Projects.html
@@ -55,7 +55,7 @@
             <div class ="project" style="background-color:#6370fd;">        
               
                 <div class="project-image">
-                    <img  src="images/Product.png">
+                    <img  src="Images/Product.png">
                 </div> 
 
             <div class="project-details">
@@ -91,7 +91,7 @@
             <div class ="project" style="background-color: #e07f96;">        
               
                 <div class="project-image">
-                    <img  src="images/mobi.png">
+                    <img  src="Images/mobi.png">
                 </div> 
 
             <div class="project-details">
